--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
 
   <groupId>org.fusesource.joram-jms-tests</groupId>
   <artifactId>joram-jms-tests</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0</version>
 
   <name>${project.artifactId}</name>
   <description>Maven artifact of the Joram JMS tests</description>
